--- a/src/body/body.css
+++ b/src/body/body.css
@@ -1,4 +1,4 @@
-.body-div{
+.body-div {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -11,24 +11,36 @@
     width: auto;
     padding-top: 6rem;
     padding-bottom: 2rem;
-}
+  }
 
-
-
-.trash:hover{
+  .trash:hover {
     color: #a4161a;
     transition-duration: 0.2s;
-}
-.edit:hover{
+  }
+  
+  .edit:hover {
     color: green;
     transition-duration: 0.2s;
-}
-
-.edit{
+  }
+  
+  .edit {
     margin: 0 11px 0 11px;
-}
-
-.info:hover{
+  }
+  
+  .info:hover {
     color: #0096c7;
-    transition-duration: 0.2s
-}
+    transition-duration: 0.2s;
+  }
+  
+  .pagination {
+    display: flex;
+    align-items: baseline;
+  }
+
+  .lines-per-page {
+    color: white;
+    display: flex;
+    align-items: center;
+    margin-left: 1rem;
+  }
+  
