--- a/src/views/body/body.css
+++ b/src/views/body/body.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-image: url("../assets/fondoOscuro.jpg");
+    background-image: url("../../assets/fondoOscuro.jpg");
     background-repeat: no-repeat;
     background-position: center;
     background-attachment: fixed;
