--- a/src/views/hardware/hardware.css
+++ b/src/views/hardware/hardware.css
@@ -1,14 +1,15 @@
-.body-div {
+.body-container {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-image: url("../assets/fondoOscuro.jpg");
+    background-image: url("../../assets/fondoOscuro.jpg");
     background-repeat: no-repeat;
     background-position: center;
     background-attachment: fixed;
     background-size: cover;
     width: auto;
+    height: 64vh;
     padding-top: 6rem;
     padding-bottom: 2rem;
   }
